--- a/development/PluginsInterface/PluginsInterface.cbp
+++ b/development/PluginsInterface/PluginsInterface.cbp
@@ -21,6 +21,7 @@
 				<Linker>
 					<Add option="-Wl,-add-stdcall-alias" />
 					<Add library="user32" />
+					<Add library="shlwapi" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -39,6 +40,7 @@
 					<Add option="-s" />
 					<Add option="-Wl,-add-stdcall-alias" />
 					<Add library="user32" />
+					<Add library="shlwapi" />
 				</Linker>
 			</Target>
 		</Build>
