--- a/development/ZasuvkaPtakopyska/ZasuvkaPtakopyska/ZasuvkaPtakopyska.csproj
+++ b/development/ZasuvkaPtakopyska/ZasuvkaPtakopyska/ZasuvkaPtakopyska.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>ZasuvkaPtakopyska</RootNamespace>
     <AssemblyName>ZasuvkaPtakopyska</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
@@ -38,6 +39,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -47,6 +49,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>logo-metro-icon-filled.ico</ApplicationIcon>
@@ -76,6 +79,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="BuildPageControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ConfigControl.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="InstallationSettings.cs" />
@@ -130,6 +136,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -142,7 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PtakopyskMetaGenerator\PtakopyskMetaGenerator.csproj">
-      <Project>{1568BFA1-47B1-4AF1-8DF1-5C95A3AD6237}</Project>
+      <Project>{1568bfa1-47b1-4af1-8df1-5c95a3ad6237}</Project>
       <Name>PtakopyskMetaGenerator</Name>
     </ProjectReference>
     <ProjectReference Include="..\ZasuvkaPtakopyskaExtender\ZasuvkaPtakopyskaExtender.csproj">
@@ -174,7 +181,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo-metro-icon-filled.ico" />
-    <Content Include="logo-metro-icon-mini.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
