a lot of hard work that i do not remember

--- a/development/PluginsInterface/PluginsInterface.cbp
+++ b/development/PluginsInterface/PluginsInterface.cbp
@@ -35,6 +35,7 @@
 					<Add option="-O2" />
 					<Add option="-Wall" />
 					<Add option="-DBUILD_DLL" />
+					<Add option="-DNDEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
