--- a/development/SceneViewInterface/SceneViewInterface.cbp
+++ b/development/SceneViewInterface/SceneViewInterface.cbp
@@ -37,8 +37,9 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-Wall" />
 					<Add option="-O2" />
+					<Add option="-Wall" />
+					<Add option="-DNDEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
