--- a/development/SceneViewPlugin/SceneViewPlugin.cbp
+++ b/development/SceneViewPlugin/SceneViewPlugin.cbp
@@ -44,6 +44,7 @@
 					<Add option="-O2" />
 					<Add option="-Wall" />
 					<Add option="-DBUILD_DLL" />
+					<Add option="-DNDEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
