--- a/templates/TemplateApp.cbp
+++ b/templates/TemplateApp.cbp
@@ -36,6 +36,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-DNDEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
